--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container main-content">
         <div class="row">
             <div class="col s12">
-                <div class="preload-fullpage" id="loading-page" style="display: block;">
+                <div class="preload-fullpage" id="loading-page" style="display: flex;">
                     <div class="preloader-wrapper big active">
                         <div class="spinner-layer spinner-blue">
                             <div class="circle-clipper left">
