--- a/index.html
+++ b/index.html
@@ -68,36 +68,55 @@
             </div>
             <div class="col s12">
                 <div id="actual-page" style="display: none;">
-                    <span id="domain-selection">
+                    <div class="site-title">
+                        <h1>Bonaparte</h1>
+                    </div>
+                    <div class="page-content">
+                        <span id="domain-selection">
+                            <div class="input-field">
+                                <select id="domain-selector" onchange="domainChange()"></select>
+                                <label>Domains: </label>
+                            </div>
+                        </span>
+                        <div class="row">
+                            <div class="col s12 m6">
+                                <div class="input-field" id="name-selection" style="display: none;">
+                                    <input type="text" id="name-selector">
+                                    <label for="name-selector">Name</label>
+                                </div>
+                            </div>
+                            <div class="col s12 m6">
+                                <div class="input-field" id="theme-selection" style="display: none;">
+                                    <select id="theme-selector">
+                                        <option value="random" selected>random</option>
+                                    </select>
+                                    <label>Theme</label>
+                                </div>
+                            </div>
+                        </div>
                         <div class="input-field">
-                            <select id="domain-selector" onchange="domainChange()"></select>
-                            <label>Domains: </label>
+                            <input type="email" id="email" minlength="3">
+                            <label for="email">Email</label>
                         </div>
-                    </span>
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <div class="input-field" id="name-selection" style="display: none;">
-                                <input type="text" id="name-selector">
-                                <label for="name-selector">Name</label>
+                        <button class="btn waves-effect waves-light" onclick="submit()">Submit
+                            <i class="material-icons right">save</i>
+                        </button>
+                        <p style="display: none;" id="message"></p>
+                    </div>
+                    <footer class="footer">
+                        <div class="footer-copyright">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col s12">
+                                        <p class="valign-wrapper center-align">Developed with <i
+                                                class="material-icons">laptop</i> obvious right?
+
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col s12 m6">
-                            <div class="input-field" id="theme-selection" style="display: none;">
-                                <select id="theme-selector">
-                                    <option value="random" selected>random</option>
-                                </select>
-                                <label>Theme</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-field">
-                        <input type="email" id="email" minlength="3">
-                        <label for="email">Email</label>
-                    </div>
-                    <button class="btn waves-effect waves-light" onclick="submit()">Submit
-                        <i class="material-icons right">save</i>
-                    </button>
-                    <p style="display: none;" id="message"></p>
+                    </footer>
                 </div>
             </div>
         </div>
