--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col s12">
-                                        <p class="valign-wrapper center-align">Developed with <i
-                                                class="material-icons">laptop</i> obvious right?
-
+                                        <p class="valign-wrapper center-align">
+                                            Frontend by Spazzlo obvious right? <br>
+                                            CSS by Gianemi2 <br>
+                                            Backend by Mz.
                                         </p>
                                     </div>
                                 </div>
