removed obvious right?

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                 <div class="row">
                                     <div class="col s12">
                                         <p class="valign-wrapper center-align">
-                                            Frontend by Spazzlo obvious right? <br>
-                                            CSS by Gianemi2 <br>
+                                            Frontend by Spazzlo<br>
+                                            CSS by Gianemi2<br>
                                             Backend by Mz.
                                         </p>
                                     </div>
