--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="col s12 m6">
                                 <div class="input-field" id="theme-selection" style="display: none;">
                                     <select id="theme-selector">
-                                        <option value="random" selected>random</option>
+                                        <option value="random" selected>Random</option>
                                     </select>
                                     <label>Theme</label>
                                 </div>
